fixing fhq and trying for center aling on mobile

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -479,6 +479,9 @@ Landing Main
  	.homepage-info-container {
 		text-align: center;
  	}
+	.homepage-info-container > * {
+		text-align: center;
+	}
 	
 	.amenitie {
 		margin: 20% auto;	
